--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Mi Página Web</title>
-  </head>
-  <body>
-    <h1>¡Hola, mundo!</h1>
-    <p>Esta es mi primera página web en GitHub Pages.</p>
-  </body>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Buscador en GitHub</title>
+</head>
+<body>
+    <h1>Buscador de Repositorios en GitHub</h1>
+    <input type="text" id="search" placeholder="Buscar palabra...">
+    <button onclick="buscar()">Buscar</button>
+    <ul id="resultados"></ul>
+
+    <script>
+        function buscar() {
+            const q = document.getElementById('search').value;
+            fetch(`https://api.github.com/search/repositories?q=${encodeURIComponent(q)}`)
+                .then(res => res.json())
+                .then(data => {
+                    const ul = document.getElementById('resultados');
+                    ul.innerHTML = '';
+                    if (data.items) {
+                        data.items.forEach(repo => {
+                            const li = document.createElement('li');
+                            li.innerHTML = `<a href="${repo.html_url}" target="_blank">${repo.full_name}</a>: ${repo.description || ''}`;
+                            ul.appendChild(li);
+                        });
+                    } else {
+                        ul.innerHTML = '<li>No se encontraron resultados.</li>';
+                    }
+                });
+        }
+    </script>
+</body>
 </html>
