--- a/index.html
+++ b/index.html
@@ -5,22 +5,33 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; background: #f8f9fa; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      background: #f8f9fa;
+    }
     h2 { color: #2a5d9f; }
-    input { padding: 8px; width: 260px; border-radius: 4px; border: 1px solid #bbb; }
+    input {
+      padding: 8px;
+      width: 260px;
+      border-radius: 4px;
+      border: 1px solid #bbb;
+    }
     .card {
       background: #fff;
       border-radius: 8px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.07);
       margin-bottom: 24px;
       padding: 18px 22px 22px 22px;
-      max-width: 900px;
+      width: 100%;
+      min-width: 0;
       position: relative;
-      overflow: visible;
+      overflow-x: auto; /* Permite scroll horizontal en la tarjeta */
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
       gap: 0;
+      box-sizing: border-box;
     }
     .card-content {
       flex: 1 1 60%;
@@ -47,7 +58,7 @@
       max-height: 220px;
       overflow-y: auto;
     }
-    @media (max-width: 900px) {
+    @media (max-width: 1200px) {
       .card { flex-direction: column; }
       .condiciones-box {
         position: static;
@@ -69,7 +80,7 @@
     }
     .restric-table {
       border-collapse: collapse;
-      min-width: 500px;
+      min-width: 700px; /* Ajusta este valor según tus columnas */
       width: 100%;
       font-size: 0.95em;
       background: #fff;
