--- a/index.html
+++ b/index.html
@@ -25,47 +25,39 @@
       padding: 18px 22px 22px 22px;
       width: 100%;
       min-width: 0;
-      position: relative;
-      overflow-x: auto; /* Permite scroll horizontal en la tarjeta */
       display: flex;
       flex-direction: row;
-      flex-wrap: wrap;
-      gap: 0;
+      gap: 24px;
       box-sizing: border-box;
+      align-items: flex-start;
+      overflow-x: auto;
     }
     .card-content {
-      flex: 1 1 60%;
+      flex: 2 1 0;
       min-width: 260px;
       max-width: 100%;
     }
     .condiciones-box {
-      flex: 1 1 38%;
+      flex: 1 1 320px;
       min-width: 220px;
-      max-width: 350px;
+      max-width: 400px;
       background: #f7f7fa;
       border-radius: 6px;
       padding: 12px 14px;
-      margin-left: 18px;
-      margin-bottom: 10px;
-      margin-top: 0;
       font-size: 0.97em;
       box-shadow: 0 1px 4px rgba(0,0,0,0.04);
-      position: absolute;
-      top: 18px;
-      right: 22px;
-      z-index: 2;
-      min-height: 80px;
-      max-height: 220px;
+      margin-top: 0;
+      margin-bottom: 10px;
+      margin-left: 0;
+      max-height: 350px;
       overflow-y: auto;
     }
-    @media (max-width: 1200px) {
+    @media (max-width: 1100px) {
       .card { flex-direction: column; }
       .condiciones-box {
-        position: static;
-        margin-left: 0;
-        margin-top: 12px;
         max-width: 100%;
         width: 100%;
+        margin-top: 12px;
       }
     }
     .mcc { font-weight: bold; color: #2a5d9f; font-size: 1.1em; }
@@ -80,7 +72,7 @@
     }
     .restric-table {
       border-collapse: collapse;
-      min-width: 700px; /* Ajusta este valor según tus columnas */
+      min-width: 700px;
       width: 100%;
       font-size: 0.95em;
       background: #fff;
