--- a/index.html
+++ b/index.html
@@ -8,29 +8,49 @@
     body {
       font-family: Arial, sans-serif;
       margin: 40px;
-      background: #f8f9fa;
+      background: linear-gradient(120deg, #fff 0%, #fff0fa 100%);
     }
-    h2 { color: #2a5d9f; }
+    h2 {
+      color: #5600EF;
+      letter-spacing: 1px;
+      font-weight: 800;
+      margin-bottom: 24px;
+    }
     input {
-      padding: 8px;
-      width: 260px;
-      border-radius: 4px;
-      border: 1px solid #bbb;
+      padding: 10px;
+      width: 280px;
+      border-radius: 6px;
+      border: 1.5px solid #5600EF;
+      font-size: 1em;
+      transition: border 0.2s, box-shadow 0.2s;
+      box-shadow: 0 1px 4px rgba(255,0,122,0.07);
+      margin-bottom: 30px;
+    }
+    input:focus {
+      border: 2px solid #FF007A;
+      outline: none;
+      box-shadow: 0 2px 8px rgba(255,0,122,0.13);
     }
     .card {
       background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.07);
-      margin-bottom: 24px;
-      padding: 18px 22px 22px 22px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(86,0,239,0.07);
+      margin-bottom: 32px;
+      padding: 22px 28px 28px 28px;
       width: 100%;
       min-width: 0;
       display: flex;
       flex-direction: row;
-      gap: 24px;
+      gap: 32px;
       box-sizing: border-box;
       align-items: flex-start;
       overflow-x: auto;
+      border: 1.5px solid #FF007A;
+      transition: box-shadow 0.2s, border 0.2s;
+    }
+    .card:hover {
+      box-shadow: 0 6px 24px rgba(86,0,239,0.18);
+      border: 2px solid #5600EF;
     }
     .card-content {
       flex: 2 1 0;
@@ -42,31 +62,48 @@
       min-width: 220px;
       max-width: 400px;
       background: #f7f7fa;
-      border-radius: 6px;
-      padding: 12px 14px;
-      font-size: 0.97em;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.04);
+      border-radius: 8px;
+      padding: 16px 18px;
+      font-size: 1em;
+      box-shadow: 0 1px 4px rgba(255,0,122,0.08);
       margin-top: 0;
       margin-bottom: 10px;
       margin-left: 0;
       max-height: 350px;
       overflow-y: auto;
+      border-left: 5px solid #FF007A;
     }
     @media (max-width: 1100px) {
       .card { flex-direction: column; }
       .condiciones-box {
         max-width: 100%;
         width: 100%;
-        margin-top: 12px;
+        margin-top: 18px;
+        border-left: none;
+        border-top: 5px solid #FF007A;
       }
     }
-    .mcc { font-weight: bold; color: #2a5d9f; font-size: 1.1em; }
-    .desc { color: #444; margin-bottom: 8px; }
-    .label { font-weight: bold; color: #555; }
+    .mcc {
+      font-weight: bold;
+      color: #5600EF;
+      font-size: 1.15em;
+      margin-bottom: 4px;
+      letter-spacing: 0.5px;
+    }
+    .desc {
+      color: #444;
+      margin-bottom: 10px;
+      font-size: 1.02em;
+    }
+    .label {
+      font-weight: bold;
+      color: #5600EF;
+      letter-spacing: 0.2px;
+    }
     .table-responsive {
       width: 100%;
       overflow-x: auto;
-      margin-top: 10px;
+      margin-top: 12px;
       background: transparent;
       border-radius: 5px;
     }
@@ -74,22 +111,51 @@
       border-collapse: collapse;
       min-width: 700px;
       width: 100%;
-      font-size: 0.95em;
+      font-size: 0.97em;
+      background: #fff;
+      margin-bottom: 10px;
+    }
+    .restric-table th {
+      background: #5600EF;
+      color: #fff;
+      border: 1.5px solid #FF007A;
+      font-weight: 700;
+      letter-spacing: 0.5px;
+    }
+    .restric-table td {
+      border: 1.5px solid #FF007A;
+      color: #333;
       background: #fff;
     }
-    .restric-table th, .restric-table td {
-      border: 1px solid #e0e0e0;
-      padding: 4px 8px;
-      text-align: center;
+    .noresult {
+      color: #FF007A;
+      margin-top: 24px;
+      font-weight: bold;
+      font-size: 1.1em;
     }
-    .restric-table th { background: #f2f2f2; }
-    .noresult { color: #b00; margin-top: 20px; }
-    .loading { color: #888; margin-top: 20px; }
+    .loading {
+      color: #888;
+      margin-top: 24px;
+      font-size: 1.05em;
+    }
     pre {
       white-space: pre-wrap;
       font-family: inherit;
       font-size: 1em;
       margin: 0;
+      color: #5600EF;
+    }
+    /* Scrollbar custom para tablas y tarjetas */
+    .table-responsive::-webkit-scrollbar,
+    .card::-webkit-scrollbar {
+      height: 8px;
+      background: #fff0fa;
+      border-radius: 4px;
+    }
+    .table-responsive::-webkit-scrollbar-thumb,
+    .card::-webkit-scrollbar-thumb {
+      background: #FF007A;
+      border-radius: 4px;
     }
   </style>
 </head>
